# RCWX

./: .gitignore  AGENTS.md  CLAUDE.md  DROP_ISSUE_ANALYSIS.md  INVESTIGATION_SUMMARY.md  LICENSE  README.md  TEMP.md  analyze_bottleneck.py  analyze_boundary_discontinuities.py  analyze_chunk_boundaries.py  analyze_chunk_consistency.py  analyze_discontinuities.py  analyze_discontinuities_detail.py  analyze_fundamental_limits.py  analyze_original_chunks.py  analyze_output.py  analyze_root_cause.py  batch_volume_compare.py  check_latest_result.py  compare_active_regions.py  compare_volume.py  crossfade_test_output.txt  diagnose_chunk_size.py  fast_test.py  optimize_fcpe_latency.py  profile_chunk_rtf.py  pyproject.toml  quick_test_buffer_fix.py  quick_test_rms_matching.py  quick_volume_compare.py  rcwx.ps1  run_with_msvc.bat  test_150ms_pb3.py  test_96ms_chunk.py  test_adaptive_final.txt  test_adaptive_fixed.txt  test_adaptive_output.txt  test_batch_debug.py  test_batch_detailed.py  (+34 more)
docs/: ANALYSIS_REPORT.md  README.md  SETUP.md  diff_report.md  moe_boost_feminization.md  moe_spec.md  pipeline-comparison-wokada.md  plan-pre-hubert-pitch-shift.md
plan/2026-07-02-architecture-review/: 00-summary.md  01-realtime-pipeline.md  02-audio-layer.md  03-gui-layer.md  04-models-layer.md
rcwx/: accelerator_graph.py  cli.py  config.py  device.py  diagnose.py  downloader.py  win_gpu_priority.py
rcwx/audio/: __init__.py  analysis.py  buffer.py  crossfade.py  crossfade_strategy.py  denoise.py  duplex.py  gtcrn.py  input.py  output.py  postprocess.py  resample.py  sola.py  stream_base.py  wav_input.py
rcwx/gui/: app.py  audio_test.py  file_converter.py  model_loader.py  realtime_controller.py
rcwx/models/: accelerator_index.py  fcpe.py  hubert_loader.py  swiftf0.py  synthesizer.py
rcwx/pipeline/: __init__.py  drift_control.py  f0_processing.py  inference.py  realtime.py  realtime_config.py  realtime_unified.py  realtime_v2.py
tests/: analyze_discontinuity.py  analyze_rvc_correlation.py  benchmark_pipeline.py  benchmark_quality.py  generate_sustained_voice.py  measure_realtime_latency.py  parallel_inference_benchmark.py  test_batch_streaming_diagnosis.py  test_chunk_continuity_detail.py  test_chunking_modes_comparison.py  test_chunking_strategies.py  test_cumulative_context.py  test_diagnostic.py  test_energy_normalization.py  test_feature_analysis.py  test_fix_proof.py  test_hubert_context.py  test_infer_streaming.py  test_lookahead_effect.py  test_overlap_chunking.py  test_overlap_continuity.py  test_overload_protection.py  test_realtime_analysis.py  test_realtime_chunk_processing.py  test_realtime_integration.py  test_realtime_performance.py  test_realtime_simulation.py  test_realtime_sola.py  test_root_cause.py  test_rvc_sola.py  test_seam_diagnosis.py  test_sola_compensation.py  test_sola_continuity.py  test_sola_debug.py  test_step_by_step.py  test_streaming_vs_batch.py  test_with_chunkbuffer.py
tools/: repro_gui_pipeline.py
(+61 files in other folders)
