[project]
name = "rcwx"
version = "0.1.0"
description = "RVC Real-time Voice Changer on Intel Arc (XPU)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.7",
    "torchaudio>=2.7",
    "pytorch-triton-xpu>=3.5.0",  # XPU Triton for torch.compile on Windows
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "scipy>=1.10",
    "customtkinter>=5.2",
    "huggingface-hub>=0.20",
    "transformers>=4.36",
    "faiss-cpu>=1.7.4",
    "swift-f0>=0.1.2",  # Ultra-fast ONNX/CPU F0 extraction
    "torchfcpe>=0.0.1",  # Fast F0 extraction (FCPE)
]

[project.optional-dependencies]
ml-denoise = [
    "denoiser>=0.1",  # Facebook's ML noise suppression (CC BY-NC 4.0)
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
rcwx = "rcwx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Resolve only for Windows
environments = ["sys_platform == 'win32'"]

# triton-xpu is Linux-only, but pytorch-triton-xpu works on Windows
override-dependencies = [
    "triton-xpu; sys_platform == 'linux'",
]

[tool.uv.sources]
torch = { index = "pytorch-xpu" }
torchaudio = { index = "pytorch-xpu" }
pytorch-triton-xpu = { index = "pytorch-xpu" }

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
